# task-manager

./: .dockerignore  .env.example  .env.prod.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DECISION_LOG.es.md  DECISION_LOG.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
alembic/: env.py
scripts/: init_test_db.sql
src/: config.py
src/application/dtos/: auth_dtos.py  task_dtos.py  task_list_dtos.py  user_dtos.py
src/application/mappers/: task_list_mapper.py  task_mapper.py
src/application/ports/: notification_port.py
src/application/services/: auth_service.py  notification_service.py
src/application/use_cases/auth/: login_user.py  register_user.py
src/application/use_cases/task/: assign_task.py  create_task.py  (+5 more)
src/domain/entities/: task.py  task_list.py  user.py
src/domain/exceptions/: domain_exceptions.py
src/domain/repositories/: task_list_repository.py  task_repository.py  user_repository.py
src/domain/value_objects/: enums.py
src/infrastructure/: logging.py
src/infrastructure/api/: dependencies.py  main.py
src/infrastructure/database/: connection.py
src/infrastructure/repositories/: sqlalchemy_task_list_repository.py  sqlalchemy_task_repository.py  sqlalchemy_user_repository.py
tests/: conftest.py
tests/integration/: conftest.py  test_auth.py  test_task_lists.py  test_tasks.py
tests/unit/test_application/: test_task_list_use_cases.py  test_task_use_cases.py
tests/unit/test_domain/: test_task_entity.py
(+20 files in other folders)
